# re-automata

./: LICENSE  README.rst  pyproject.toml
re_automata/finite_automata/: __init__.py  automata.py  transition_tree.py
re_automata/regex/: AST.py  __init__.py  parser.py  tokens.py
tests/: test_finite_automata.py  test_regex_parser.py
